@@ -61,7 +61,8 @@ AC_PROG_YACC
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 
-AC_DISABLE_STATIC
+AC_DISABLE_SHARED
+dnl AC_DISABLE_STATIC - maybe use shared libs later
 AC_PROG_LIBTOOL
 
 AC_CONFIG_LIBOBJ_DIR(pub)
