@@ -692,7 +692,9 @@ enum builtin
    fn_greaterthan,
    fn_lessthan,
    fn_readtcp,
-   fn_printfile
+   fn_printfile,
+   fn_userexists,
+   fn_groupexists
    };
 
 /*******************************************************************/
