@@ -1,5 +1,10 @@
 
 2.2.2
+	The build procedure for cfengine changes in this version to
+	incorporate an intermediate library. The default behaviour is now
+	to build a shared library which will be used by cfengine 3 and
+	other application interfaces.
+	
 	scli modifications.
 
 	Intermittency entropy code added to the copy instrumentation for
@@ -7,6 +12,8 @@
 
 	libtoolizing compilation process for migration to cfengine shared library
 	(this is to support mulitple interfaces in future, and cf 3)
+
+	UserExists("name") and GroupExists("name") functions added to builtin functions.
 	
 2.2.1
 	scli: type section added. This is a special case of shellcommands, which
